# strix-roost

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: bin.rs  dependency.rs  lib.rs  main.rs
src/cli/: base.rs
src/dependency/: base.rs  cli.rs  empty.rs  everything.rs  growth.rs  hop.rs  llm.rs  mod.rs  semantics_based.rs  symbol.rs  syntax_based.rs
src/dependency/ai/: dependency_check.rs  mod.rs  model.rs
src/iris/: iao.rs  mod.rs  owl.rs  rdf.rs  rdfs.rs  skos.rs
src/ontology/: cli.rs  io.rs  mod.rs  visitor.rs
src/ontology/processors/: annotations.rs  mod.rs
src/util/: error.rs  graph.rs  mod.rs
