[package]
name = "strix-roost"
description = "A high-performance command-line tool to process ontologies and calculate dependencies between symbols of an ontology."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["ontology", "semantics", "dependency", "ontology-quality"]
repository = "https://github.com/scientific-ontology-network/strix-roost"
readme = "README.md"

[lib]
name = "strix_roost"           # Libraries cannot contain hyphens!
path = "src/lib.rs"
test = true


[[bin]]
name = "strix-roost"
path = "src/bin.rs"
test = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horned-owl = "1.1.0"
itertools = "0.14.0"
serde = { version = "1.0.223", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
indicatif = { version ="0.18.3", features = ["rayon"] }
rayon = "1.11.0"
crossbeam = "0.8.4"
